<resources>
    <string name="app_name">InMatch</string>
    <string name="title_home">Home</string>
    <string name="title_match">Partite</string>
    <string name="title_players">Giocatori</string>
    <string name="title_player">Profilo</string>
    <string name="title_activity_login">Login</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_confirm">Conferma password</string>
    <string name="prompt_username">Nome utente</string>
    <string name="prompt_name">Nome</string>
    <string name="prompt_surname">Cognome</string>
    <string name="action_sign_in">Registrati</string>
    <string name="action_sign_in_short">Registrati</string>
    <string name="action_login">Accedi</string>
    <string name="error_invalid_email">L\'indirizzo mail non è valido</string>
    <string name="error_invalid_password">La password è troppo corta</string>
    <string name="error_incorrect_password">La password non è corretta</string>
    <string name="error_field_required">Campo obbligatorio</string>
    <string name="error_password_confirm">Le passwords non corrispondono</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_sign_login">SignLoginActivity</string>
    <string name="action_settings">Opzioni</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="operation_success">Operazione eseguita</string>
    <string name="soccer_label">CALCIO</string>
    <string name="basket_label">BASKET</string>
    <string name="tennis_label">TENNIS</string>
    <string name="volley_label">VOLLEY</string>
    <string name="next_match">PROSSIMA PARTITA</string>
    <string name="generate_teams">GENERA FORMAZIONI</string>
    <string name="teams_generated">Formazioni generate</string>
    <string name="edit_match">Modifica partita - {0}</string>
    <string name="new_match">Nuova partita - {0}</string>
    <string name="deselect_some_player">Deseleziona alcuni giocatori</string>

    // Attributes
    <string name="role">Ruolo</string>
    <string name="velocity">Velocità</string>
    <string name="power">Potenza</string>
    <string name="attac">Attacco</string>
    <string name="defense">Difesa</string>
    <string name="agility">Agilità</string>
    <string name="dribbling">Dribbling</string>
    <string name="passage">Passaggio</string>
    <string name="finality">Finalizzazione</string>
    <string name="battuta">Servizio</string>
    <string name="dritto">Dritto</string>
    <string name="rovescio">Rovescio</string>
    <string name="schiacciata">Schiacciata</string>
    <string name="ricezione">Ricezione</string>
    <string name="precisione">Precisione</string>


    //Ruoli

    <string name="role_soccer_0">Portiere</string>
    <string name="role_soccer_1">Difensore</string>
    <string name="role_soccer_2">Centrocampista</string>
    <string name="role_soccer_3">Esterno</string>
    <string name="role_soccer_4">Attaccante</string>

    //Error
    <string name="error_name_player">Devi inserire il nome del giocatore</string>
    <string name="error_surnname_player">Devi inserire il cognome del giocatore</string>
    <string name="error_location_match">Devi inserire il luogo</string>
    <string name="error_data_match">Devi inserire la data</string>
    <string name="error_first_team_match">Devi inserire il nome della prima squadra</string>
    <string name="error_second_team_match">Devi inserire il nome della seconda squadra</string>
    <string name="error_number_player_match">Devi selezionare {0} giocatori</string>
    <string name="error_max_player">Hai già selezionato tutti i giocatori</string>
    <string name="error_default">Errore di rete</string>
    <string name="error_players_deleted">Alcuni giocatori sono stati eliminati</string>

    //Elimina

    <string name="delete">Elimina</string>
    <string name="delete_player">Vuoi eliminare questo giocatore?</string>
    <string name="delete_match">Vuoi eliminare questa partita?</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    // Fab Label

    <string name="share_match_fab">Condividi match</string>
    <string name="delete_match_fab">Elimina match</string>
    <string name="edit_match_fab">Modifica match</string>
    <string name="insert_result_fab">Inserisci risultato</string>
</resources>
