<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView android:id="@+id/scrollVolley"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:circular="http://schemas.android.com/apk/res-auto"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:local="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <android.support.v7.widget.LinearLayoutCompat
            android:id="@+id/titleVolleyFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/volleyColor"
            android:visibility="gone"
            android:layout_marginBottom="5dp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp">
            <com.ready.sport.inmatch.util.TextViewPlus
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/volley_label"
                android:textSize="22dp"
                android:textColor="#ffff"
                android:textAlignment="center"/>
        </android.support.v7.widget.LinearLayoutCompat>
        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingTop="20dp">
            <com.ready.sport.inmatch.util.CircularProgressBar
                android:id="@+id/circularprogressbarVolley"
                style="@style/Widget.ProgressBar.Volley.CircularProgressBar"
                android:layout_width="120dip"
                android:layout_height="120dip"
                android:layout_marginTop="10dip"
                android:layout_marginBottom="20dp"
                circular:title="5,0"
                android:layout_gravity="center"/>
        </android.support.v7.widget.LinearLayoutCompat>
        <!--<android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="60dp">
            <com.ready.sport.inmatch.util.TextViewPlus
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/role"
                android:paddingLeft="20dp"
                android:layout_gravity="center"/>
            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/spinnerBasket"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="20dp"
                style="@style/customtheme">

            </android.support.v7.widget.AppCompatSpinner>
        </android.support.v7.widget.LinearLayoutCompat>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/separatorColor"/>-->
        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="60dp">
            <com.ready.sport.inmatch.util.TextViewPlus
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/battuta"
                android:paddingLeft="20dp"
                android:layout_gravity="center"/>
            <com.xw.repo.BubbleSeekBar
                android:id="@+id/seekbarVolBat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:bsb_auto_adjust_section_mark="true"
                app:bsb_show_section_mark="true"
                android:layout_gravity="center"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="float type, section text interval : 2, auto adjust"
                android:textSize="12sp"/>
        </android.support.v7.widget.LinearLayoutCompat>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/separatorColor"/>
        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="60dp">
            <com.ready.sport.inmatch.util.TextViewPlus
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/power"
                android:paddingLeft="20dp"
                android:layout_gravity="center"/>
            <com.xw.repo.BubbleSeekBar
                android:id="@+id/seekbarVolPot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:bsb_auto_adjust_section_mark="true"
                app:bsb_show_section_mark="true"
                android:layout_gravity="center"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="float type, section text interval : 2, auto adjust"
                android:textSize="12sp"/>
        </android.support.v7.widget.LinearLayoutCompat>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/separatorColor"/>
        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="60dp">
            <com.ready.sport.inmatch.util.TextViewPlus
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/ricezione"
                android:paddingLeft="20dp"
                android:layout_gravity="center"/>
            <com.xw.repo.BubbleSeekBar
                android:id="@+id/seekbarVolRic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:bsb_auto_adjust_section_mark="true"
                app:bsb_show_section_mark="true"
                android:layout_gravity="center"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="float type, section text interval : 2, auto adjust"
                android:textSize="12sp"/>
        </android.support.v7.widget.LinearLayoutCompat>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/separatorColor"/>
        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="60dp">
            <com.ready.sport.inmatch.util.TextViewPlus
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/defense"
                android:paddingLeft="20dp"
                android:layout_gravity="center"/>
            <com.xw.repo.BubbleSeekBar
                android:id="@+id/seekbarVolDif"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:bsb_auto_adjust_section_mark="true"
                app:bsb_show_section_mark="true"
                android:layout_gravity="center"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="float type, section text interval : 2, auto adjust"
                android:textSize="12sp"/>
        </android.support.v7.widget.LinearLayoutCompat>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/separatorColor"/>
        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="60dp">
            <com.ready.sport.inmatch.util.TextViewPlus
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/precisione"
                android:paddingLeft="20dp"
                android:layout_gravity="center"/>
            <com.xw.repo.BubbleSeekBar
                android:id="@+id/seekbarVolPre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:bsb_auto_adjust_section_mark="true"
                app:bsb_show_section_mark="true"
                android:layout_gravity="center"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="float type, section text interval : 2, auto adjust"
                android:textSize="12sp"/>
        </android.support.v7.widget.LinearLayoutCompat>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/separatorColor"/>
        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="60dp">
            <com.ready.sport.inmatch.util.TextViewPlus
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/schiacciata"
                android:paddingLeft="20dp"
                android:layout_gravity="center"/>
            <com.xw.repo.BubbleSeekBar
                android:id="@+id/seekbarVolSc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:bsb_auto_adjust_section_mark="true"
                app:bsb_show_section_mark="true"
                android:layout_gravity="center"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="float type, section text interval : 2, auto adjust"
                android:textSize="12sp"/>
        </android.support.v7.widget.LinearLayoutCompat>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/separatorColor"/>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>