<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:columnCount="2"
        android:rowCount="2"
        android:layout_marginTop="50dp">
    <android.support.v7.widget.LinearLayoutCompat
        android:id="@+id/linear1"
        android:layout_width="wrap_content"
        android:layout_height="210dp"
        android:backgroundTint="@color/colorPrimary"
        android:layout_column="0"
        android:layout_row="0"
        android:text="Button 1"
        android:layout_gravity="left"
        android:layout_marginLeft="20dp">

            <android.support.v7.widget.CardView
                android:id="@+id/cardSoccer"
                android:layout_width="150dp"
                android:layout_height="180dp"
                android:backgroundTint="@color/colorPrimary"
                android:foreground="?attr/selectableItemBackground"
                android:stateListAnimator="@anim/card_anim"
                android:clickable="true">
                <android.support.v7.widget.LinearLayoutCompat
                    android:id="@+id/soccerbox"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_above="@+id/volleyLabel"
                    android:gravity="center_horizontal">
                    <android.support.v7.widget.AppCompatImageView
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:scaleType="center"
                        android:src="@drawable/soccer_icon"
                        android:layout_gravity="center"/>
                </android.support.v7.widget.LinearLayoutCompat>

                <android.support.v7.widget.LinearLayoutCompat
                    android:id="@+id/soccerLabel"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:background="@color/soccerColor"
                    android:layout_gravity="bottom">
                    <com.ready.sport.inmatch.util.TextViewPlus
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/soccer_label"
                        android:textSize="18dp"
                        android:gravity="center"
                        android:textColor="@android:color/white"
                        android:textAlignment="center"/>
                </android.support.v7.widget.LinearLayoutCompat>
            </android.support.v7.widget.CardView>
    </android.support.v7.widget.LinearLayoutCompat>
        <android.support.v7.widget.LinearLayoutCompat
            android:id="@+id/linear2"
            android:layout_width="wrap_content"
            android:layout_height="210dp"
            android:backgroundTint="@color/bckg"
            android:layout_column="1"
            android:layout_row="0"
            android:text="Button 2"
            android:layout_rowSpan="1"
            android:layout_gravity="right"
            android:layout_marginRight="20dp">

            <android.support.v7.widget.CardView
                android:id="@+id/cardBasket"
                android:layout_width="150dp"
                android:layout_height="180dp"
                android:backgroundTint="@color/colorPrimary"
                android:foreground="?attr/selectableItemBackground"
                android:stateListAnimator="@anim/card_anim"
                android:clickable="true">
                <android.support.v7.widget.LinearLayoutCompat
                    android:id="@+id/basketbox"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_above="@+id/basketLabel"
                    android:gravity="center_horizontal">
                    <android.support.v7.widget.AppCompatImageView
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:scaleType="center"
                        android:src="@drawable/basket_icon"
                        android:layout_gravity="center"/>

                </android.support.v7.widget.LinearLayoutCompat>

                <android.support.v7.widget.LinearLayoutCompat
                    android:id="@+id/basketLabel"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:background="@color/basketColor"
                    android:layout_gravity="bottom">
                    <com.ready.sport.inmatch.util.TextViewPlus
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/basket_label"
                        android:textSize="18dp"
                        android:gravity="center"
                        android:textColor="@android:color/white"
                        android:textAlignment="center"/>
                </android.support.v7.widget.LinearLayoutCompat>
            </android.support.v7.widget.CardView>
    </android.support.v7.widget.LinearLayoutCompat>

        <android.support.v7.widget.LinearLayoutCompat
            android:id="@+id/linear3"
            android:layout_width="wrap_content"
            android:layout_height="210dp"
            android:backgroundTint="@color/colorPrimary"
            android:layout_column="0"
            android:layout_row="1"
            android:text="Button 1"
            android:layout_gravity="left"
            android:layout_marginLeft="20dp">

            <android.support.v7.widget.CardView
                android:id="@+id/cardTennis"
                android:layout_width="150dp"
                android:layout_height="180dp"
                android:backgroundTint="@color/colorPrimary"
                android:foreground="?attr/selectableItemBackground"
                android:stateListAnimator="@anim/card_anim"
                android:clickable="true">
                <android.support.v7.widget.LinearLayoutCompat
                    android:id="@+id/tennisbox"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_above="@+id/tennisLabel"
                    android:gravity="center_horizontal">
                    <android.support.v7.widget.AppCompatImageView
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:scaleType="center"
                        android:src="@drawable/tennis_icon"
                        android:layout_gravity="center"/>

                </android.support.v7.widget.LinearLayoutCompat>

                <android.support.v7.widget.LinearLayoutCompat
                    android:id="@+id/tennisLabel"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:background="@color/tennisColor"
                    android:layout_gravity="bottom">
                    <com.ready.sport.inmatch.util.TextViewPlus
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/tennis_label"
                        android:textSize="18dp"
                        android:gravity="center"
                        android:textColor="@android:color/white"
                        android:textAlignment="center"/>
                </android.support.v7.widget.LinearLayoutCompat>
            </android.support.v7.widget.CardView>
        </android.support.v7.widget.LinearLayoutCompat>
        <android.support.v7.widget.LinearLayoutCompat
            android:id="@+id/linear4"
            android:layout_width="wrap_content"
            android:layout_height="210dp"
            android:backgroundTint="@color/bckg"
            android:layout_column="1"
            android:layout_row="1"
            android:text="Button 2"
            android:layout_rowSpan="1"
            android:layout_gravity="right"
            android:layout_marginRight="20dp">

            <android.support.v7.widget.CardView
                android:id="@+id/cardVolley"
                android:layout_width="150dp"
                android:layout_height="180dp"
                android:backgroundTint="@color/colorPrimary"
                android:foreground="?attr/selectableItemBackground"
                android:stateListAnimator="@anim/card_anim"
                android:clickable="true">
                <android.support.v7.widget.LinearLayoutCompat
                    android:id="@+id/volleybox"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_above="@+id/volleyLabel"
                    android:gravity="center_horizontal">
                    <android.support.v7.widget.AppCompatImageView
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:scaleType="center"
                        android:src="@drawable/volley_icon"
                        android:layout_gravity="center"/>

                </android.support.v7.widget.LinearLayoutCompat>

                <android.support.v7.widget.LinearLayoutCompat
                    android:id="@+id/volleyLabel"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:background="@color/volleyColor"
                    android:layout_gravity="bottom">
                    <com.ready.sport.inmatch.util.TextViewPlus
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/volley_label"
                        android:textSize="18dp"
                        android:gravity="center"
                        android:textColor="@android:color/white"
                        android:textAlignment="center"/>
                </android.support.v7.widget.LinearLayoutCompat>
            </android.support.v7.widget.CardView>
        </android.support.v7.widget.LinearLayoutCompat>
    </GridLayout>
</LinearLayout>